remove isAddress from Bank