@@ -1,7 +1,6 @@
 package net.focik.homeoffice.finance.domain.bank;
 
 import lombok.RequiredArgsConstructor;
-import net.focik.homeoffice.addresses.api.internal.AddressEndpoint;
 import net.focik.homeoffice.addresses.domain.Address;
 import net.focik.homeoffice.finance.domain.bank.port.secondary.BankRepository;
 import net.focik.homeoffice.finance.domain.exception.BankAlreadyExistException;
@@ -16,30 +15,18 @@ import org.springframework.stereotype.Service;
 import jakarta.transaction.Transactional;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 class BankService {
 
     private final BankRepository bankRepository;
-    private final AddressEndpoint addressEndpoint;
     LoanFacade loanFacade;
 
     @Transactional
     public Bank addBank(Bank bank) {
-        Address address = null;
         validate(bank);
-        if (isAddress(bank)) {
-            address = addressEndpoint.addAddress(bank.getAddress());
-            bank.setAddress(address);
-        }
-
-        Bank saved = bankRepository.save(bank);
-        if (address != null) {
-            saved.setAddress(address);
-        }
-        return saved;
+        return bankRepository.save(bank);
     }
 
     private boolean isAddress(Bank bank) {
@@ -49,27 +36,10 @@ class BankService {
 
     @Transactional
     public Bank updateBank(Bank bank) {
-        Bank byId = findById(bank.getId(), false);
-        Address address = null;
+        Bank byId = findById(bank.getId());
         bank.getAddress().setId(byId.getAddress().getId());
         validate(bank);
-
-
-        if (bank.getAddress().getId() > 0) {
-            address = addressEndpoint.updateAddress(bank.getAddress());
-            bank.setAddress(address);
-        }
-
-        if (bank.getAddress().getId() == 0 && isAddress(bank)) {
-            address = addressEndpoint.addAddress(bank.getAddress());
-            bank.setAddress(address);
-        }
-
-        Bank saved = bankRepository.save(bank);
-        if (address != null) {
-            saved.setAddress(address);
-        }
-        return saved;
+        return bankRepository.save(bank);
     }
 
     private void validate(Bank bank) {
@@ -81,9 +51,7 @@ class BankService {
 
     @Transactional
     public void deleteBank(Integer id) {
-        Bank byId = findById(id, false);
         canBeDeleted(id);
-        addressEndpoint.deleteAddress(byId.getAddress().getId());
         bankRepository.delete(id);
 
     }
@@ -91,44 +59,30 @@ class BankService {
     private void canBeDeleted(Integer id) {
         List<Loan> loansByBank = loanFacade.getLoansByStatus(PaymentStatus.ALL, false)
                 .stream().filter(loan -> loan.getBank().getId()==id)
-                .collect(Collectors.toList());
+                .toList();
         if(!loansByBank.isEmpty()){
              throw new BankCanNotBeDeletedException("kredyty");
         }
     }
 
-    public Bank findById(Integer id, Boolean isAddress) {
+    public Bank findById(Integer id) {
         Optional<Bank> byId = bankRepository.findById(id);
         if (byId.isEmpty()) {
             throw new BankNotFoundException("id", String.valueOf(id));
         }
-        if (isAddress != null && isAddress && byId.get().getAddress().getId() > 0) {
-            byId.get().setAddress(addressEndpoint.getAddress(byId.get().getAddress().getId()));
-        }
         return byId.get();
     }
 
-    public Bank findByName(String name, Boolean isAddress) {
+    public Bank findByName(String name) {
         Optional<Bank> byName = bankRepository.findByName(name);
         if (byName.isEmpty()) {
             throw new BankNotFoundException("nazwa", String.valueOf(name));
         }
-        if (isAddress != null && isAddress) {
-            byName.get().setAddress(addressEndpoint.getAddress(byName.get().getAddress().getId()));
-        }
         return byName.get();
     }
 
-    public List<Bank> findByAll(Boolean isGetAddress) {
-        List<Bank> bankList = bankRepository.findAll();
-
-        if (isGetAddress != null && isGetAddress) {
-            bankList.stream()
-                    .filter(bank -> bank.getAddress().getId() > 0)
-                    .forEach(bank -> bank.setAddress(addressEndpoint.getAddress(bank.getAddress().getId())));
-        }
-
-        return bankList;
+    public List<Bank> findByAll() {
+        return bankRepository.findAll();
     }
 
 }
